2006-02-11  Derek Atkins  <derek@ihtfp.com>

	* src/report/report-gnome/gnc-plugin-page-report.c:
	  don't need to scm_gc_{un,}protect_object on SCM_BOOL_F.

	* src/business/business-reports/owner-report.scm:
	  set the document title properly AFTER type-str is set.

	* configure.in:
	  rework the initialization to require autoconf-2.59 and automake-1.9
	  parse the version out of the AC_PACKAGE_VERSION macro, so
	  we still only need to set it in one place.  This should
	  solve a number of old-automake related problems people have seen.

2006-02-11  David Hampton  <hampton@employees.org>

	* src/gnome/glade/acctperiod.glade:
	* src/gnome/glade/sched-xact.glade:
	* src/gnome/glade/account.glade: Patch from Tommi Vainikainen
	<tvainika@niksula.hut.fi> to remove extraneous line breaks.

	* src/backend/file/test/test-xml-commodity.c:
	* src/backend/file/gnc-commodity-xml-v2.c:
	* src/backend/postgres/table.m4:
	* src/import-export/ofx/gnc-ofx-import.c:
	* src/import-export/import-commodity-matcher.[ch]:
	* src/gnome-utils/gnc-tree-view-commodity.c:
	* src/gnome-utils/gnc-tree-model-commodity.[ch]:
	* src/gnome-utils/dialog-commodity.[ch]:
	* src/engine/gw-engine-spec.scm:
	* src/engine/test-core/test-engine-stuff.c:
	* src/engine/test/test-commodities.c:
	* src/engine/gnc-commodity.[ch]: Globally replace the words
	"exchange_code" with cusip in the source. No user visible changes.

2006-02-11  Christian Stimming  <stimming@tuhh.de>

	* po/Makevars: Add --keyword=Q_ to xgettext arguments so that
	translations with context prefix/disambiguation prefix are
	included as well.

2006-02-10  David Hampton  <hampton@employees.org>

	* src/gnome/gnc-plugin-page-account-tree.c: Correctly open an
	account and its sub-accounts. Fixes 330745.

2006-02-10  Derek Atkins  <derek@ihtfp.com>

	* src/gnome-utils/dialog-options.c:
	  Test for an empty string when translating.  (Fixes #330179)

	* Makefile.am:
	  added README.dependencies to the dist.  Fixes #330614.

	* configure.in: